[gd_scene load_steps=4 format=3 uid="uid://c4d5e6f7g8h9i0j"]

[ext_resource type="Script" path="res://scripts/world/Portal.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bkmnoplqrstuvwx" path="res://assets/sprites/ui/portal.png" id="2"]

[node name="Portal" type="Area2D"]
script = ExtResource("1")
target_world_id = 1
portal_name = "Mental World Portal"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2")
modulate = Color(0.5, 0.8, 1, 0.8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[sub_resource type="CircleShape2D" id="1"]
radius = 32.0

[node name="CollisionShape2D" parent="." index="2"]
shape = SubResource("1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="PortalIdleAnimation" type="Animation" id="3"]
resource_name = "idle"
length = 1.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.6, 1]
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_cooldown_finished"]
